--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,2 +1,11 @@
-Flask==1.1.2
+click==8.1.3
+colorama==0.4.4
+Flask==2.1.0
+Flask-Cors==3.0.10
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
 mysql-connector==2.2.9
+pyodbc==4.0.32
+six==1.16.0
+Werkzeug==2.1.2
